--- a/sample.config.json
+++ b/sample.config.json
@@ -1,8 +1,8 @@
 {
   "batch_size": 32,
   "image_channel": 3,
-  "image_path": "X:\\dataset\\test",
-  "attr_path": "X:\\dataset\\test.txt",
+  "image_path": "/path/to/image",
+  "attr_path": "/path/to/attr/list.txt",
   "image_ext": "jpg",
   "image_dim": 93,
   "attr": [
@@ -32,7 +32,7 @@
   "partition_interval": 4,
   "freq_gen": 100,
   "freq_test": 2000,
-  "all_result_dir": "../LittleGAN-result",
+  "all_result_dir": "/path/to/LittleGAN-result",
   "restore": true,
   "train_adj": true,
   "prefetch": 320
