Change default config

--- a/sample.config.json
+++ b/sample.config.json
@@ -23,10 +23,12 @@
   "dropout_rate": 0.5,
   "l1_lambda": 0.02,
   "lr": 5e-5,
+  "beta_1": 0.5,
+  "beta_2": 0.9,
   "epoch": 100,
   "use_gp": false,
   "gp_weight": 5.0,
-  "use_clip": false,
+  "use_clip": true,
   "clip_range": 0.5,
   "use_partition": true,
   "partition_interval": 4,
