--- a/sample.config.json
+++ b/sample.config.json
@@ -41,6 +41,7 @@
   "condition_sample_batch": 100,
   "evaluate_sample_size": 30000,
   "restore": true,
+  "reuse": false,
   "train_adj": true,
   "prefetch": 320,
   "threads": 8
